I write Exceptions and all work, but I use only PrintWriter

--- a/JavaLabs/Lab2/resources/personal/bakunevich/commands.properties
+++ b/JavaLabs/Lab2/resources/personal/bakunevich/commands.properties
@@ -1,6 +1,6 @@
 PUSH=personal.bakunevich.commands.Push
 POP=personal.bakunevich.commands.Pop
-#=personal.bakunevich.commands.Comment
+\#=personal.bakunevich.commands.Comment
 +=personal.bakunevich.commands.Add
 -=personal.bakunevich.commands.Sub
 *=personal.bakunevich.commands.Mul
