I write Exceptions and all work

--- a/JavaLabs/Lab2/resources/personal/bakunevich/commands.properties
+++ b/JavaLabs/Lab2/resources/personal/bakunevich/commands.properties
@@ -8,3 +8,4 @@ POP=personal.bakunevich.commands.Pop
 SQRT=personal.bakunevich.commands.Sqrt
 PRINT=personal.bakunevich.commands.Print
 DEFINE=personal.bakunevich.commands.Define
+#EXIT=personal.bakunevich.commands.Exit
